--- a/src/blocks/popup/__button/popup__button.css
+++ b/src/blocks/popup/__button/popup__button.css
@@ -25,3 +25,18 @@
     line-height: 17px;
   }
 }
+
+.popup__button-disabled {
+  opacity: 0.2;
+  background-color: transparent;
+  border: 1px solid #000;
+  color: #000;
+}
+
+.popup__button-disabled:hover {
+  opacity: 0.2;
+  background-color: transparent;
+  border: 1px solid #000;
+  color: #000;
+  cursor: default;
+}
