--- a/src/blocks/popup/__input/popup__input.css
+++ b/src/blocks/popup/__input/popup__input.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 47px;
   border: 0;
-  border-bottom: 1px solid rgba(0, 0, 0, .2);
+  border-bottom: 1px solid rgba(0, 0, 0, 0.2);
   font-size: 14px;
   line-height: 18px;
   box-sizing: border-box;
@@ -19,4 +19,20 @@
     font-size: 12px;
     line-height: 15px;
   }
+}
+
+.popup__input-error {
+  border-bottom: 1px solid #f00;
+}
+
+.popup__input_type-error {
+  visibility: hidden;
+  font-weight: 400;
+  font-size: 12px;
+  color: #f00;
+  margin: 0;
+}
+
+.popup__input_type-error-active {
+  visibility: visible;
 }
