--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,4 +1,5 @@
 .profile__image {
+  position: relative;
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
@@ -7,6 +8,28 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+}
+
+.profile__image::before {
+  content: "";
+  visibility: hidden;
+  opacity: 0;
+  position: absolute;
+  inset: 0;
+  inline-size: 100%;
+  block-size: 100%;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.8);
+  background-image: url("../../../images/Pencil.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  transition: opacity 0.3s, visibility 0.3s;
+  cursor: pointer;
+}
+
+.profile__image:hover::before {
+  visibility: visible;
+  opacity: 1;
 }
 
 @media screen and (max-width: 740px) {
